--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-linechart": "^1.1.12",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
